--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="sensorPortrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,7 +38,7 @@
             android:name=".activities.AppointmentCalendarActivity"
             android:label="@string/title_activity_appointment_calendar"
             android:parentActivityName=".activities.QuickMenuActivity"
-            android:screenOrientation="portrait"
+            android:screenOrientation="sensorPortrait"
             android:launchMode="singleTask" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
@@ -48,7 +48,7 @@
             android:name=".activities.AppointmentTypeSpinnerActivity"
             android:label="@string/title_activity_appointment_type_spinner"
             android:parentActivityName=".activities.QuickMenuActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".activities.QuickMenuActivity" />
@@ -57,7 +57,7 @@
             android:name=".activities.CalendarActivity"
             android:label="@string/title_activity_calendar"
             android:parentActivityName=".activities.QuickMenuActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".activities.QuickMenuActivity" />
@@ -67,7 +67,7 @@
             android:label="@string/title_activity_confirm_appointment"
             android:launchMode="singleTask"
             android:parentActivityName=".activities.QuickMenuActivity"
-            android:screenOrientation="portrait" 
+            android:screenOrientation="sensorPortrait" 
             android:noHistory="true" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
@@ -77,7 +77,7 @@
             android:name=".activities.ContactDetailsActivity"
             android:label="@string/title_activity_contact_details"
             android:parentActivityName=".activities.QuickMenuActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".activities.QuickMenuActivity" />
@@ -86,7 +86,7 @@
             android:name=".activities.CreateAppointmentActivity"
             android:label="@string/title_activity_create_appointment"
             android:parentActivityName=".activities.QuickMenuActivity"
-            android:screenOrientation="portrait"
+            android:screenOrientation="sensorPortrait"
             android:noHistory="true" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
@@ -96,7 +96,7 @@
             android:name=".activities.ObstreticHistoryActivity"
             android:label="@string/title_activity_obstretic_history"
             android:parentActivityName=".activities.QuickMenuActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".activities.QuickMenuActivity" />
@@ -114,13 +114,13 @@
             android:name=".activities.QuickMenuActivity"
             android:label="@string/title_activity_quick_menu"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
 
         <activity
             android:name=".activities.SelectTimeActivity"
             android:label="@string/title_activity_select_time"
             android:parentActivityName=".activities.QuickMenuActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".activities.QuickMenuActivity" />
@@ -129,7 +129,7 @@
             android:name=".activities.ServiceUserActivity"
             android:label="@string/title_activity_service_user"
             android:parentActivityName=".activities.QuickMenuActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".activities.QuickMenuActivity" />
@@ -138,7 +138,7 @@
             android:name=".activities.ServiceUserSearchActivity"
             android:label="@string/title_activity_service_user_search"
             android:parentActivityName=".activities.QuickMenuActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".activities.QuickMenuActivity" />
@@ -147,7 +147,7 @@
             android:name=".activities.StockNoteActivity"
             android:label="@string/title_activity_stock_note"
             android:parentActivityName=".activities.QuickMenuActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".activities.QuickMenuActivity" />
@@ -156,7 +156,7 @@
             android:name=".activities.TodayAppointmentActivity"
             android:label="@string/title_activity_today_appointment"
             android:parentActivityName=".activities.QuickMenuActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensorPortrait" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".activities.QuickMenuActivity" />
