--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:22.1.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.google.code.gson:gson:2.3.1'
 }
