--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name=".activities.LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="sensorPortrait"
-            android:theme="@android:style/android:Theme.Material.Light.NoActionBar"> >
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"> >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
